# digi_surf

./: README.md  pyproject.toml
src/digi_surf/: __init__.py  surfgen.py  utils.py
src/digi_surf/models/: diff_generator.py  predict_model.py  scscore.py  trfm_model.py
src/digi_surf/models/mol_opt/: build_vocab.py  configs.yaml  dataset.py  generate.py  models.py  utils.py
src/digi_surf/models/mol_opt/.ipynb_checkpoints/: testing-checkpoint.ipynb
src/digi_surf/models/mol_opt/data/: test_multi.csv  test_single.csv  train_multi.csv  train_single.csv  vocab.pkl
src/digi_surf/models/mol_opt/multi/: configs.yaml  train_scaler_values.pt
src/digi_surf/models/mol_opt/single/: configs.yaml  train_scaler_values.pt
src/digi_surf/models/prop_pred/: config.yaml  dataset.py  model.py  robust_scaler.pkl
tests/: test_pipeline.py
