[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "digital-surfactant"
version = "0.1.0"
description = "Molecular generation for surfactant discovery"
authors = [{name="Your Name"}]

dependencies = [
    "torch==2.4",
    "rdkit",
    "pandas",
    "numpy",
    "natsort",
    "torch-molecule",
    "matplotlib",
    "gdown"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"digi_surf" = [
    "models/prop_pred/config.yaml",
    "models/prop_pred/robust_scaler.pkl",
    "models/mol_opt/configs.yaml",
    "models/mol_opt/multi/configs.yaml",
    "models/mol_opt/multi/train_scaler_values.pt",
    "models/mol_opt/single/configs.yaml",
    "models/mol_opt/single/train_scaler_values.pt",
    "models/mol_opt/data/*.csv",
    "models/mol_opt/data/*.pkl",
    "models/surfpro_train.csv",
]